--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.facebook.stetho:stetho:1.1.1'
-    compile 'com.android.support:support-v4:22.2.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:22.2.1'
+    implementation 'com.facebook.stetho:stetho:1.1.1'
+    implementation 'com.android.support:support-v4:22.2.1'
 }
